Done button was too small on mobile. Fixed fullscreen not working. Added visual indicator that generated images are being downloaded

--- a/src/Contacts/ContactsPage.css
+++ b/src/Contacts/ContactsPage.css
@@ -41,6 +41,11 @@
   animation: fadeOut 1s linear 2s 1;
 }
 
+.done-add-button {
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  font-size: 1.25rem;
+}
 @keyframes fadeOut {
   from {
     opacity: 1;
