--- a/src/css/index.css
+++ b/src/css/index.css
@@ -313,7 +313,25 @@ input[type="file"] {
   color: var(--dark);
   font-size: 1.5rem;
 }
+.fa-download.bounce {
+  animation: bounce 2s infinite;
+}
 
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
 .custom-checkbox-label::before {
   content: "";
   position: absolute;
